# routes/api.php
@@ -73,6 +73,8 @@ Route::middleware("auth:api")->group(function (): void {
         Route::get("/users/{user}/devices", [DeviceAssignmentController::class, "userDevices"])->name("users.devices");
 
         Route::get("/users", [UserController::class, "index"])->name("users.index");
+        Route::put("/users/{user}", [UserController::class, "update"])->name("users.update");
+        Route::delete("/users/{user}", [UserController::class, "destroy"])->name("users.destroy");
     });
 });
 
